fix button alignment

--- a/index.css
+++ b/index.css
@@ -357,17 +357,28 @@ button {
   text-transform: uppercase;
   font-weight: var(--font-weight-medium);
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
 }
 
 button:hover {
   background: var(--background-color-alt);
 }
+
 button:active {
   transform: translate(2px, 2px);
 }
 
 button a {
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: calc(var(--line-height) / 2 - var(--border-thickness)) 1ch;
 }
 
 label {
